--- a/wordfind_app/pubspec.yaml
+++ b/wordfind_app/pubspec.yaml
@@ -76,12 +76,14 @@ flutter:
   fonts:
     - family: Ribeye
       fonts:
-        - asset: fonts/Ribeye-Regular.ttf
-#     - family: Trajan Pro
-#       fonts:
-#         - asset: fonts/TrajanPro.ttf
-#         - asset: fonts/TrajanPro_Bold.ttf
-#           weight: 700
+        - asset: assets/fonts/Ribeye-Regular.ttf
+#          style: italic
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/Nunito-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Nunito-Bold.ttf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
