--- a/icodegram_app/pubspec.yaml
+++ b/icodegram_app/pubspec.yaml
@@ -80,14 +80,13 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-fonts:
+  fonts:
     - family: Lobster
       fonts:
-        - asset: fonts/Lobster-Regular.ttf
+        - asset: assets/fonts/Lobster-Regular.ttf
     - family: Rubik
       fonts:
-        - asset: fonts/Rubik-Bold.ttf
-          weight: 400
+        - asset: assets/fonts/Rubik-Regular.ttf
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
