--- a/day_19_flutter/pubspec.yaml
+++ b/day_19_flutter/pubspec.yaml
@@ -35,12 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.13.1
+  firebase_core: ^2.14.0
   cloud_firestore: ^4.8.0
   firebase_storage: ^11.2.2
   firebase_auth: ^4.6.2
   flutter_svg: ^2.0.6
   image_picker: ^1.0.1
+  uuid: ^3.0.5
 
 dev_dependencies:
   flutter_test:
