--- a/day_19_flutter/pubspec.yaml
+++ b/day_19_flutter/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_auth: ^4.6.2
   flutter_svg: ^2.0.6
   image_picker: ^1.0.1
+  provider: ^6.0.1
   uuid: ^3.0.5
 
 dev_dependencies:
